# kocaml-cubing

./: .gitignore  README.md  dune-project  kocaml_cubing.opam
src/: coordinate.ml  coordinate.mli  coordinate2.ml  coordinate2.mli  coordinate_0.mli  coordinate_deprecated.ml  coordinate_deprecated.mli  coordinate_old.ml  coordinate_old.mli  cube.ml  cube.mli  cubie.ml  cubie.mli  cubie3.ml  cubie3.mli  cubie_intf.ml  cubie_intf.mli  cubie_with_orientation.ml  cubie_with_orientation.mli  dune  lookup_table.ml  lookup_table.mli  modular_int.ml  modular_int.mli  move.ml  move.mli  perm.ml  perm.mli  perm_sgn.ml  plan.md  pruning_table.mli  setup.ml  symmetry.ml  symmetry.mli  temp.ml
test/: dune  temp.txt  tests.ml
test/lookup_tables/coordinates/move/: twist.sexp
test/lookup_tables/coordinates/sym/: twist.sexp
