(library
  (name modular_int)
  (modules modular_int)
  (libraries
    core))

(library
  (name lookup_table)
  (modules lookup_table)
  (libraries
    core)
  (preprocess
  (pps ppx_jane)))

(library
  (name cubie)
  (modules cubie)
  (libraries
    core
    modular_int)
  (preprocess
  (pps ppx_jane)))

(library
  (name move)
  (modules move)
  (libraries
    cubie
    modular_int)
  (preprocess
  (pps ppx_jane)))

(library
  (name perm)
  (modules perm)
  (libraries
    move)
  (preprocess
  (pps ppx_jane)))

(library
  (name symmetry)
  (modules symmetry)
  (libraries
    move
    perm
    cubie)
  (preprocess
    (pps ppx_jane)))

(library
  (name coordinate)
  (modules coordinate)
  (libraries
    perm
    move
    symmetry
    lookup_table)
  (preprocess
    (pps ppx_jane)))

(library
  (name coordinate2)
  (modules coordinate2)
  (libraries
    perm
    move
    symmetry
    lookup_table)
  (preprocess
    (pps ppx_jane)))