(library
  (name modular_int)
  (modules modular_int)
  (libraries
    core)
  (preprocess
  (pps ppx_jane)))

(library
  (name lookup_table)
  (modules lookup_table)
  (libraries
    core)
  (preprocess
  (pps ppx_jane)))

(library
  (name cubie)
  (modules cubie)
  (libraries
    core
    modular_int)
  (preprocess
  (pps ppx_jane)))

(library
  (name move)
  (modules move)
  (libraries
    cubie
    modular_int)
  (preprocess
  (pps ppx_jane)))

(library
  (name perm)
  (modules perm)
  (libraries
    move)
  (preprocess
  (pps ppx_jane)))

(library
  (name symmetry)
  (modules symmetry)
  (libraries
    move
    perm
    cubie
    lookup_table)
  (preprocess
    (pps ppx_jane)))

(library
  (name coordinate)
  (modules coordinate)
  (libraries
    perm
    core_unix.sys_unix
    core
    move
    symmetry
    lookup_table)
  (preprocess
    (pps ppx_jane)))

(library
  (name cube)
  (modules cube)
  (libraries
    core
    perm
    coordinate
    move))

(executable
 (name setup)
 (modules setup)
 (libraries
   core
   coordinate))